[package]
name = "dioxus-table"
version = "0.1.1"
edition = "2021"
authors = ["Maccesch"]
license-file = "LICENSE"
description = "Make data-driven table rendering easy with Dioxus"
repository = "https://github.com/Synphonyte/dioxus-table"
readme = "README.md"
keywords = ["dioxus", "table", "front-end", "wasm"]

[dependencies]
dioxus-table-macro = { path = "dioxus-table-macro", version = "^0.1.1" }
dioxus = "0.2.4"
serde_json = "1.0.79"
serde = { version = "1.0.136", features = ["derive"] }
rust_decimal = "1"
chrono = "0.4"
bigdecimal = "0.3"
thiserror = "1"

[workspace]
members = [
    "dioxus-table-macro"
]